Fix aspect ratio in image container component on smaller screens (#5179)
* Fix aspect ratio utility on smaller screens

* Functionalize aspect ratio calculation & better document it

* Update _patterns_image.scss

update documentation to be more clear

* patch version bump for aspect ratio fix

* Switching to flexbox with image contained

* Revert "patch version bump for aspect ratio fix"

This reverts commit 8023d0978890a44942049b115e408275c83f6387.

---------

--- a/scss/_patterns_image.scss
+++ b/scss/_patterns_image.scss
@@ -27,14 +27,20 @@
   .p-image-container,
   [class^='p-image-container--'] {
     align-items: center;
-    display: grid;
+    display: flex;
     justify-content: center;
     text-align: center;
-    .p-image-container__image {
-      object-fit: contain;
-    }
+
     &.is-highlighted {
       background: $colors--theme--background-alt;
+    }
+
+    .p-image-container__image {
+      // max height prevents the image from stretching the container
+      // when the aspect ratio is set, and object-fit ensures the aspect ratio
+      // of the image content is maintained
+      max-height: 100%;
+      object-fit: contain;
     }
   }
 
